# TextEditor

./: CMakeLists.txt  CMakePresets.json  README.md
TextEditor/: CMakeLists.txt  TextEditor  main.cpp
src/: main.cpp
